tests/reference/asr-arrays_04-880407c.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/arrays_04.py:6:5
  |
6 |     x: i16[5] = empty([5], dtype=int32)
  |     ^           ^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i16[5]' and 'i32[5]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
